// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/BetterGR/grades-microservice/protos";

package grades;

// The greeting service definition.
service GradesService {
  // GetCourseGrades returns all students grades enrolled in a specific course
  rpc GetCourseGrades(GetCourseGradesRequest) returns (GetCourseGradesResponse);

  // GetStudentCourseGrades returns a specific student grades in specific course
  rpc GetStudentCourseGrades(GetStudentCourseGradesRequest) returns (GetStudentCourseGradesResponse);

  // AddHomeworkGrade adds a homework grade for a student in specific course
  rpc AddHomeworkGrade(AddHomeworkGradeRequest) returns (Empty);

  // AddExamGrade adds an exam grade for a student in specific course
  rpc AddExamGrade(AddExamGradeRequest) returns (Empty);

  // UpdateHomeworkGrade updates a homework grade for a student in specific course
  rpc UpdateHomeworkGrade(UpdateHomeworkGradeRequest) returns (Empty);

  // UpdateExamGrade updates an exam grade for a student in specific course
  rpc UpdateExamGrade(UpdateExamGradeRequest) returns (Empty);

  // DeleteHomeworkGrade deletes a homework grade for a student in specific course
  rpc DeleteHomeworkGrade(DeleteHomeworkGradeRequest) returns (Empty);

  // DeleteExamGrade deletes an exam grade for a student in specific course
  rpc DeleteExamGrade(DeleteExamGradeRequest) returns (Empty);
}

//------------------------------- Data Types -------------------------------
// ExamGrade is a single Exam grade message
message ExamGrade {
  string course = 1;
  string exam_type = 2;
  string grade = 3;
}

// HomeworkGrade is a single Homework grade message
message HomeworkGrade {
  string course = 1;
  string homework_number = 2;
  string grade = 3;
}

// StudentCourseGrades represent all specific course grades for a student
message StudentCourseGrades {
  string student_id = 1;
  string course_id = 2;
  repeated ExamGrade exams = 3;
  repeated HomeworkGrade homeworks = 4;
}

// StudentGrades represent all grades for a student
message StudentGrades {
  string student_id = 1;
  repeated StudentCourseGrades courses = 2;
}

// Empty message could be used later to validate the request
message Empty {}

//------------------------------- Request and Response -------------------------------

// GetCourseGradesRequest is a request message to get grades of all students enrolled in a specific course
message GetCourseGradesRequest {
  string course_id = 1;
}

// GetCourseGradesResponse is a response message for all students grades enrolled in a specific course
message GetCourseGradesResponse {
  repeated StudentCourseGrades grades = 1;
}

// GetStudentCourseGradesRequest is a request message to get a specific student grades in specific course
message GetStudentCourseGradesRequest {
  string student_id = 1;
  string course_id = 2;
}

// GetStudentCourseGradesResponse is a response message for a specific student grades in specific course
message GetStudentCourseGradesResponse {
  StudentCourseGrades course_grades = 1;
}

// AddHomeworkGradeRequest is a request message to add a homework grade for a student in specific course
message AddHomeworkGradeRequest {
  string student_id = 1;
  string course_id = 2;
  string homework_number = 3;
  string grade = 4;
}

// UpdateHomeworkGradeRequest is a request message to update a homework grade for a student in specific course
message UpdateHomeworkGradeRequest {
  string student_id = 1;
  string course_id = 2;
  string homework_number = 3;
  string grade = 4;
}

// AddExamGradeRequest is a request message to add an exam grade for a student in specific course
message AddExamGradeRequest {
  string student_id = 1;
  string course_id = 2;
  string exam_type = 3;
  string grade = 4;
}

// UpdateExamGradeRequest is a request message to update an exam grade for a student in specific course
message UpdateExamGradeRequest {
  string student_id = 1;
  string course_id = 2;
  string exam_type = 3;
  string grade = 4;
}

// DeleteHomeworkGradeRequest is a request message to delete a homework grade for a student in specific course
message DeleteHomeworkGradeRequest {
  string student_id = 1;
  string course_id = 2;
  string homework_number = 3;
}

// DeleteExamGradeRequest is a request message to delete an exam grade for a student in specific course
message DeleteExamGradeRequest {
  string student_id = 1;
  string course_id = 2;
  string exam_type = 3;
}

